--- a/server/package.json
+++ b/server/package.json
@@ -17,7 +17,8 @@
   },
   "homepage": "https://github.com/brannondorsey/FermiGameJam#readme",
   "dependencies": {
-    "peer": "^0.2.8"
+    "peer": "^0.2.8",
+    "socket.io": "^1.4.8"
   },
   "devDependencies": {
     "babel-cli": "^6.14.0",
