--- a/server/package.json
+++ b/server/package.json
@@ -17,6 +17,7 @@
   },
   "homepage": "https://github.com/brannondorsey/FermiGameJam#readme",
   "dependencies": {
+    "node-fetch": "^1.6.0",
     "peer": "^0.2.8",
     "socket.io": "^1.4.8"
   },
