--- a/server/package.json
+++ b/server/package.json
@@ -23,6 +23,7 @@
   },
   "devDependencies": {
     "babel-cli": "^6.14.0",
-    "babel-preset-es2015": "^6.14.0"
+    "babel-preset-es2015": "^6.14.0",
+    "babyparse": "^0.4.6"
   }
 }
